testdata/baselines/reference/submodule/compiler/inferentialTypingUsingApparentType2.errors.txt
inferentialTypingUsingApparentType2.ts(2,5): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== inferentialTypingUsingApparentType2.ts (1 errors) ====
    function foo<T extends { m(p: string): number }>(x: T): T {
        return undefined;
        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    }
    
    foo({ m(x) { return x.length } });